@@ -26,12 +26,17 @@
  * @bug 8262271
  * @requires vm.hasSA
  * @library /test/lib
- * @run main/timeout=240 JStackStressTest
+ *  @compile -g --add-exports=jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED  --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.tools=ALL-UNNAMED  --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.debugger=ALL-UNNAMED --add-modules jdk.hotspot.agent JStackStressTest.java
+ * @run main/othervm --add-opens jdk.hotspot.agent/sun.jvm.hotspot.tools=ALL-UNNAMED JStackStressTest
  */
 
 import java.io.IOException;
 import java.io.OutputStream;
-
+import java.util.ArrayList;
+import sun.jvm.hotspot.debugger.JVMDebugger;
+import sun.jvm.hotspot.tools.*;
+import sun.jvm.hotspot.*;
+import java.util.concurrent.*;
 import jdk.test.lib.JDKToolLauncher;
 import jdk.test.lib.JDKToolFinder;
 import jdk.test.lib.process.OutputAnalyzer;
@@ -41,38 +46,58 @@ import jdk.test.lib.Utils;
 
 public class JStackStressTest {
 
-    static Process jShellProcess;
+    Process jShellProcess;
 
-    public static void testjstack() throws IOException {
+    public void testjstack() throws IOException {
         launchJshell();
         long jShellPID = jShellProcess.pid();
-        OutputAnalyzer jshellOutput = new OutputAnalyzer(jShellProcess);
 
         try {
             // Do 4 jstacks on the jshell process as it starts up
-            for (int i = 1; i <= 4; i++) {
-                JDKToolLauncher launcher = JDKToolLauncher.createUsingTestJDK("jhsdb");
-                launcher.addVMArgs(Utils.getTestJavaOpts());
-                launcher.addToolArg("jstack");
-                launcher.addToolArg("--pid=" + Long.toString(jShellPID));
+        //     for (int i = 1; i <= 4; i++) {
+        //         JDKToolLauncher launcher = JDKToolLauncher.createUsingTestJDK("jhsdb");
+        //         launcher.addVMArgs(Utils.getTestJavaOpts());
+        //         launcher.addToolArg("jstack");
+        //         launcher.addToolArg("--pid=" + Long.toString(jShellPID));
 
+        //         System.out.println("###### Starting jstack iteration " + i + " against " + jShellPID);
+        //         long startTime = System.currentTimeMillis();
+        //         ProcessBuilder processBuilder = SATestUtils.createProcessBuilder(launcher);
+        //         OutputAnalyzer output = ProcessTools.executeProcess(processBuilder);
+        //         System.out.println("jhsdb jstack stdout:");
+        //         System.out.println(output.getStdout());
+        //         System.out.println("jhsdb jstack stderr:");
+        //         System.out.println(output.getStderr());
+        //         long elapsedTime = System.currentTimeMillis() - startTime;
+        //         System.out.println("###### End of all output for iteration " + i +
+        //                            " which took " + elapsedTime + "ms");
+        //         output.shouldHaveExitValue(0);
+        //         // This will detect most SA failures, including during the attach.
+        //         output.shouldNotMatch("^sun.jvm.hotspot.debugger.DebuggerException:.*$");
+        //         // This will detect unexpected exceptions, like NPEs and asserts, that are caught
+        //         // by sun.jvm.hotspot.tools.Tool.execute().
+        //         output.shouldNotMatch("^Error: .*$");
+        //     }
+        // } catch (Exception ex) {
+        //     throw new RuntimeException("Test ERROR " + ex, ex);
+        // } finally {
+        //     try (OutputStream out = jShellProcess.getOutputStream()) {
+        //         out.write("/exit\n".getBytes());
+        //         out.flush();
+        //     }
+        //     try {
+        //         jShellProcess.waitFor(); // jshell should exit quickly
+        //     } catch (InterruptedException e) {
+        //     }
+        //     System.out.println("jshell Output: " + jshellOutput.getOutput());
+        // }
+            for (int i = 1; i <= 40; i++) {
+                JStack jstack = new JStack();
+                var args = new ArrayList<String>();
+                args.add(Long.toString(jShellPID));
                 System.out.println("###### Starting jstack iteration " + i + " against " + jShellPID);
-                long startTime = System.currentTimeMillis();
-                ProcessBuilder processBuilder = SATestUtils.createProcessBuilder(launcher);
-                OutputAnalyzer output = ProcessTools.executeProcess(processBuilder);
-                System.out.println("jhsdb jstack stdout:");
-                System.out.println(output.getStdout());
-                System.out.println("jhsdb jstack stderr:");
-                System.out.println(output.getStderr());
-                long elapsedTime = System.currentTimeMillis() - startTime;
-                System.out.println("###### End of all output for iteration " + i +
-                                   " which took " + elapsedTime + "ms");
-                output.shouldHaveExitValue(0);
-                // This will detect most SA failures, including during the attach.
-                output.shouldNotMatch("^sun.jvm.hotspot.debugger.DebuggerException:.*$");
-                // This will detect unexpected exceptions, like NPEs and asserts, that are caught
-                // by sun.jvm.hotspot.tools.Tool.execute().
-                output.shouldNotMatch("^Error: .*$");
+                jstack.runWithArgs(args.toArray(new String[args.size()]));
+                System.out.println("returned");
             }
         } catch (Exception ex) {
             throw new RuntimeException("Test ERROR " + ex, ex);
@@ -80,23 +105,26 @@ public class JStackStressTest {
             try (OutputStream out = jShellProcess.getOutputStream()) {
                 out.write("/exit\n".getBytes());
                 out.flush();
+                // out.close();
             }
             try {
                 jShellProcess.waitFor(); // jshell should exit quickly
-            } catch (InterruptedException e) {
+            } catch (Exception e) {
+                e.printStackTrace();
             }
-            System.out.println("jshell Output: " + jshellOutput.getOutput());
+            // System.out.println("jshell Output: " + jshellOutput.getOutput());
         }
     }
 
-    public static void launchJshell() throws IOException {
+    public void launchJshell() throws IOException {
         System.out.println("Starting Jshell");
         long startTime = System.currentTimeMillis();
         try {
-            JDKToolLauncher launcher = JDKToolLauncher.createUsingTestJDK("jshell");
-            launcher.addVMArgs(Utils.getTestJavaOpts());
-            ProcessBuilder pb = new ProcessBuilder(launcher.getCommand());
-            jShellProcess = ProcessTools.startProcess("JShell", pb);
+                jShellProcess = Runtime.getRuntime().exec("/local/theRealAph-jdk/build/linux-x86_64-server-release/jdk/bin/jshell");
+            // JDKToolLauncher launcher = JDKToolLauncher.createUsingTestJDK("jshell");
+            // launcher.addVMArgs(Utils.getTestJavaOpts());
+            // ProcessBuilder pb = new ProcessBuilder(launcher.getCommand());
+            // jShellProcess = ProcessTools.startProcess("JShell", pb);
         } catch (Exception ex) {
             throw new RuntimeException("Test ERROR " + ex, ex);
         }
@@ -104,8 +132,18 @@ public class JStackStressTest {
 
     public static void main(String[] args) throws Exception {
         SATestUtils.skipIfCannotAttach(); // throws SkippedException if attach not expected to work.
-        testjstack();
-
+        ExecutorService service = Executors.newThreadPerTaskExecutor(Thread.ofPlatform().factory());
+        for (int i = 0; i < 1; i++) {
+            service.execute(() -> {
+                    try {
+                        new JStackStressTest().testjstack();
+                    } catch (Throwable t) {
+                        t.printStackTrace();
+                        System.exit(1);
+                    }
+                });
+        }
+        service.awaitTermination(20, TimeUnit.SECONDS);
         // The test throws RuntimeException on error.
         // IOException is thrown if Jshell can't start because of some bad
         // environment condition
